🩹 Fixed Action Bar UI on mobile

--- a/app/components/bar/bar.module.css
+++ b/app/components/bar/bar.module.css
@@ -9,6 +9,7 @@
 	justify-content: center;
 	min-width: 50vw;
 	font-size: 20px;
+	transition: 0s all !important;
 }
 
 .toggle {
@@ -17,7 +18,7 @@
 	padding-right: 10px;
 	display: flex;
 	align-items: center;
-	transition: all 0.1s;
+	transition: background-color 0.1s;
 	margin-top: 6px;
 	margin-bottom: 6px;
 }
@@ -36,7 +37,7 @@
 	padding-right: 10px;
 	display: flex;
 	align-items: center;
-	transition: all 0.1s;
+	transition: background-color 0.1s;
 	background-color: var(--bg-color);
 	color: var(--font-color);
 	padding: 10px;
@@ -64,7 +65,7 @@
 
 .name {
 	padding-left: 5px;
-	transition: all 0.1s;
+	transition: background-color 0.1s;
 }
 
 .selection {
@@ -98,7 +99,7 @@
 	padding: 10px;
 	padding-left: 2.5px;
 	display: none;
-	transition: all 0.25s;
+	transition: background-color 0.25s;
 	height: 60vh;
 	overflow-y: scroll;
 }
@@ -126,4 +127,8 @@
 
 .barMobile {
 	font-size: 15px;
+}
+
+.barHidden {
+	display: none;
 }
